--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Arsen Tolkov | Developer</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./portfolio-skeleton/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -403,6 +403,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./portfolio-skeleton/script.js"></script>
   </body>
 </html>
